fix projects version tablet

--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -672,14 +672,14 @@ i:hover{
       
          padding-bottom: 64px;
          &__container{
-             width: 88%;
+             width: 80%;
              margin-left: auto;
              margin-right: auto;
          }
          &__title{
-            position: relative;
+   
             font-size: 2.2rem;
-            margin-left: -11rem;
+           
             margin-top: 6rem;
          }
         
